[gd_scene load_steps=17 format=2]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://Menus/MainMenu/Settings.gd" type="Script" id=4]
[ext_resource path="res://Fonts/PixelOperator.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Menus/MainMenu/Buttons/menu_arrows.png" type="Texture" id=6]
[ext_resource path="res://Menus/MainMenu/Buttons/menu_arrows_base.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.709804, 0.709804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.709804, 0.443137, 0.443137, 1 )

[sub_resource type="Theme" id=6]
default_font = ExtResource( 2 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Label/fonts/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 73
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 1
outline_color = Color( 0.219608, 0.368627, 0.470588, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 137, 28 )

[sub_resource type="Animation" id=3]
resource_name = "FloatingTitle"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Name:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.176777, 12.5533 ),
"update": 0,
"values": [ Vector2( -487, -229 ), Vector2( -487, -200 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FloatingTitleBackwards"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Name:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -487, -200 ), Vector2( -487, -229 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Name" type="Label" parent="CanvasLayer"]
margin_left = -487.0
margin_top = -229.0
margin_right = -221.0
margin_bottom = -155.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "LDPrep40"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_right = 280.0
color = Color( 0.529412, 0.211765, 0.211765, 1 )

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 56.0
margin_right = 252.0
margin_bottom = 184.0

[node name="Start" type="Button" parent="CanvasLayer/ColorRect/MainContainer"]
margin_right = 252.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 8 )
text = "Start"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect/MainContainer/Start"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -14.0
margin_right = 18.0
margin_bottom = 22.0
texture = ExtResource( 7 )

[node name="Settings" type="Button" parent="CanvasLayer/ColorRect/MainContainer"]
margin_top = 32.0
margin_right = 252.0
margin_bottom = 64.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ColorRect/MainContainer/Settings"]
margin_left = 280.0
margin_top = -348.0
margin_right = 1023.0
margin_bottom = 164.0
color = Color( 0, 0, 0, 0.843137 )

[node name="label" type="Label" parent="CanvasLayer/ColorRect/MainContainer/Settings"]
margin_left = 302.0
margin_top = -38.0
margin_right = 363.0
margin_bottom = -17.0
theme = ExtResource( 3 )
text = "Window"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox" type="OptionButton" parent="CanvasLayer/ColorRect/MainContainer/Settings/label"]
anchor_left = 0.5
anchor_right = 1.20455
anchor_bottom = 0.53125
margin_left = 65.0
margin_right = 159.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Windowed"
align = 1
items = [ "Windowed", null, false, 0, null, "Borderless Windowed", null, false, 1, null, "Fullscreen", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="CanvasLayer/ColorRect/MainContainer"]
margin_top = 68.0
margin_right = 252.0
margin_bottom = 100.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="TitleAnimation" type="AnimationPlayer" parent="."]
anims/FloatingTitle = SubResource( 3 )
anims/FloatingTitleBackwards = SubResource( 5 )

[connection signal="pressed" from="CanvasLayer/ColorRect/MainContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/MainContainer/Settings" to="CanvasLayer/ColorRect/MainContainer/Settings" method="_on_Settings_pressed"]
[connection signal="item_selected" from="CanvasLayer/ColorRect/MainContainer/Settings/label/CheckBox" to="CanvasLayer/ColorRect/MainContainer/Settings" method="_on_CheckBox_item_selected"]
[connection signal="pressed" from="CanvasLayer/ColorRect/MainContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="animation_finished" from="TitleAnimation" to="." method="_on_TitleAnimation_animation_finished"]
